# LLM-Analysis-TDS-Project-2

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  main.py  pyproject.toml  shared_store.py
tools/: __init__.py  add_dependencies.py  audio_transcribing.py  download_file.py  encode_image_to_base64.py  image_content_extracter.py  run_code.py  send_request.py  web_scraper.py
